--- a/public/directives/cart.html
+++ b/public/directives/cart.html
@@ -1,23 +1,22 @@
-    <table>
-       <tr>
-         <th>Item</th>
-         <th>Price</th>
-         <th>Quantity</th>
-         <th>Sub-total</th>
-       </tr>
-        <tr id="cartItem" ng-repeat="item in cart">
-          <td>{{item.item}}</td>
-          <td>{{item.price | currency}}</td>
-          <td>{{item.quantity}}</td>
-          <td>{{(item.quantity * item.price) | currency}}</td>
-          <td ng-click="cartCtrl.removeItem(item.id)" class="remove" title="remove">X</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td>Total:</td>
-          <td>${{cartTotal}}</td>
-        </tr>
-     </table>
-     <a class="ng-link" ng-click='cartCtrl.toggleCart();'>Close</a>
-     <a href="/check-out">Check out</a>
+<table class>
+  <tr>
+    <th>Item</th>
+    <th>Price</th>
+    <th>Quantity</th>
+    <th>Sub-total</th>
+  </tr>
+  <tr id="cartItem" ng-repeat="item in cart">
+    <td>{{item.item}}</td>
+    <td>{{item.price | currency}}</td>
+    <td>{{item.quantity}}</td>
+    <td>{{(item.quantity * item.price) | currency}}</td>
+    <td ng-click="cartCtrl.removeItem(item.id)" class="remove ng-link" title="remove"><i class="foundicon-remove"></i></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>Total:</td>
+    <td>{{cartTotal | currency}}</td>
+  </tr>
+</table>
+<a href="/check-out" class="button alert">Check out</a>
